--- a/Flask Hosting/templates/index.html
+++ b/Flask Hosting/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Connect 4 vs Perfect CPU</h1>
+    <h1>Connect 4 vs Perfect CPU (sort of)</h1>
 
     <div class="panel">
       <div id="status" class="status">Loading…</div>
